fix quantity spacing

--- a/ui/src/components/Custodian/CreateDeposit.css
+++ b/ui/src/components/Custodian/CreateDeposit.css
@@ -1,8 +1,11 @@
-
 @media screen and (max-width: 1000px) {
     .custodian-clients .ui.form > .fields.inline-form-group {
         flex-direction: column;
         align-items: flex-start;
+    }
+
+    .ui.form > .fields.inline-form-group .field .create-deposit-quantity {
+        padding-left: 5px;
     }
 
     .custodian-clients .ui.form > .fields.inline-form-group .contract-select-container {
